# libecoli

./: .build.yml  .clang-format  .codespellrc  .editorconfig  .mailmap  CONTRIBUTING.md  LICENSE  Makefile  README.md  meson.build  meson_options.txt  parse-yaml.sh  test-completion.sh  todo.txt
.github/workflows/: check.yml  ci.yml  codeql.yml  publish.yml
devtools/: ai-instructions.md  check-comments  check-commits  commit-msg
doc/: Doxyfile.in  architecture.md  architecture.rst  conf.py  contributing.rst  index.rst  installation.rst  meson.build  overview.rst  user_guide.rst
examples/: meson.build
examples/extension-editline/: README.md  main.c  meson.build  node_bool_tuple.c
examples/parse-yaml/: cond.yaml  cross.yaml  ecoli-parse-yaml.sh  meson.build  parse-yaml.c  parse-yaml.sh  test-completion.sh  test.yaml
examples/pool-editline/: README.md  ip_pool.c  ip_pool.h  main.c  meson.build
examples/readline/: main.c  meson.build
examples/simple-editline/: README  README.md  main.c  meson.build
examples/yaml/: parse-yaml.c  test.yaml
include/: ecoli.h  ecoli_assert.h  ecoli_complete.h  ecoli_config.h  ecoli_dict.h  ecoli_editline.h  ecoli_htable.h  ecoli_init.h  ecoli_keyval.h  ecoli_log.h  ecoli_malloc.h  ecoli_murmurhash.h  ecoli_node.h  ecoli_node_any.h  ecoli_node_bypass.h  ecoli_node_cmd.h  ecoli_node_cond.h  ecoli_node_dynamic.h  ecoli_node_empty.h  ecoli_node_expr.h  ecoli_node_file.h  ecoli_node_helper.h  ecoli_node_int.h  ecoli_node_many.h  ecoli_node_none.h  ecoli_node_once.h  ecoli_node_option.h  ecoli_node_or.h  ecoli_node_re.h  ecoli_node_re_lex.h  ecoli_node_seq.h  ecoli_node_sh_lex.h  ecoli_node_space.h  ecoli_node_str.h  ecoli_node_subset.h  ecoli_parse.h  ecoli_string.h  ecoli_strvec.h  ecoli_test.h  ecoli_utils.h  (+3 more)
include/ecoli/: assert.h  complete.h  config.h  dict.h  editline.h  htable.h  init.h  interact.h  log.h  murmurhash.h  node.h  node_any.h  node_bypass.h  node_cmd.h  node_cond.h  node_dynamic.h  node_dynlist.h  node_empty.h  node_expr.h  node_file.h  node_helper.h  node_int.h  node_many.h  node_none.h  node_once.h  node_option.h  node_or.h  node_re.h  node_re_lex.h  node_seq.h  node_sh_lex.h  node_str.h  node_subset.h  parse.h  string.h  strvec.h  utils.h  vec.h  yaml.h
lib/: Makefile  ecoli_assert.c  ecoli_assert.h  ecoli_complete.c  ecoli_complete.h  ecoli_completed.c  ecoli_completed.h  ecoli_config.c  ecoli_config.h  ecoli_init.c  ecoli_init.h  ecoli_keyval.c  ecoli_keyval.h  ecoli_log.c  ecoli_log.h  ecoli_malloc.c  ecoli_malloc.h  ecoli_murmurhash.c  ecoli_murmurhash.h  ecoli_node.c  ecoli_node.h  ecoli_node_any.c  ecoli_node_any.h  ecoli_node_cmd.c  ecoli_node_cmd.h  ecoli_node_dynamic.c  ecoli_node_dynamic.h  ecoli_node_empty.c  ecoli_node_empty.h  ecoli_node_expr.c  ecoli_node_expr.h  ecoli_node_expr_test.c  ecoli_node_file.c  ecoli_node_file.h  ecoli_node_helper.c  ecoli_node_int.c  ecoli_node_int.h  ecoli_node_many.c  ecoli_node_many.h  ecoli_node_none.c  (+76 more)
libecoli/: ecoli_complete.c  ecoli_complete.h  ecoli_config.h  ecoli_init.c  ecoli_keyval.h  ecoli_malloc.c  ecoli_malloc.h  ecoli_murmurhash.h  ecoli_node.c  ecoli_node_any.c  ecoli_node_cmd.c  ecoli_node_expr.c  ecoli_node_file.h  ecoli_node_int.c  ecoli_node_none.c  ecoli_node_none.h  ecoli_node_once.c  ecoli_node_once.h  ecoli_node_option.c  ecoli_node_option.h  ecoli_node_or.h  ecoli_node_re.c  ecoli_node_re_lex.c  ecoli_node_re_lex.h  ecoli_node_sh_lex.c  ecoli_node_str.c  ecoli_node_subset.h  ecoli_parse.c  ecoli_parse.h  ecoli_string.c  ecoli_strvec.c  ecoli_strvec.h  ecoli_utils.h  ecoli_vec.c  ecoli_vec.h
libecoli_editline/: editline.c
libecoli_yaml/: ecoli_yaml.c
libshell/: libecoli.sh
license/: README
mk/: ecoli-ar-rules.mk  ecoli-ar-vars.mk  ecoli-clean-rules.mk  ecoli-clean-vars.mk  ecoli-copy-rules.mk  ecoli-copy-vars.mk  ecoli-exe-rules.mk  ecoli-exe-vars.mk  ecoli-obj-rules.mk  ecoli-obj-vars.mk  ecoli-objcopy-rules.mk  ecoli-objcopy-vars.mk  ecoli-post.mk  ecoli-pre.mk  ecoli-shlib-rules.mk  ecoli-shlib-vars.mk  ecoli-slink-rules.mk  ecoli-slink-vars.mk  ecoli-subdir-rules.mk  ecoli-subdir-vars.mk  ecoli-tools.mk  ecoli-vars.mk
src/: assert.c  complete.c  config.c  dict.c  ecoli_assert.c  ecoli_complete.c  ecoli_config.c  ecoli_dict.c  ecoli_editline.c  ecoli_htable.c  ecoli_htable_private.h  ecoli_init.c  ecoli_keyval.c  ecoli_log.c  ecoli_malloc.c  ecoli_murmurhash.c  ecoli_node.c  ecoli_node_any.c  ecoli_node_bypass.c  ecoli_node_cmd.c  ecoli_node_cond.c  ecoli_node_dynamic.c  ecoli_node_empty.c  ecoli_node_expr.c  ecoli_node_expr_test.c  ecoli_node_file.c  ecoli_node_helper.c  ecoli_node_int.c  ecoli_node_many.c  ecoli_node_none.c  ecoli_node_once.c  ecoli_node_option.c  ecoli_node_or.c  ecoli_node_re.c  ecoli_node_re_lex.c  ecoli_node_seq.c  ecoli_node_sh_lex.c  ecoli_node_space.c  ecoli_node_str.c  ecoli_node_subset.c  (+44 more)
test/: complete.c  config.c  dict.c  htable.c  log.c  malloc.c  meson.build  node.c  node_any.c  node_bypass.c  node_cmd.c  node_cond.c  node_dynamic.c  node_dynlist.c  node_empty.c  node_expr.c  node_file.c  node_int.c  node_many.c  node_none.c  node_once.c  node_option.c  node_or.c  node_re.c  node_re_lex.c  node_seq.c  node_sh_lex.c  node_space.c  node_str.c  node_subset.c  parse.c  string.c  strvec.c  test.c  test.h  vec.c  yaml.c
