option('yaml', type : 'feature', value : 'auto',
       description: 'Compile with yaml support using libyaml.')
option('editline', type : 'feature', value : 'auto',
       description: 'Compile with editline support using libedit.')
option('doc', type : 'feature', value : 'auto',
       description: 'Generate project documentation.')
option('tests', type : 'feature', value : 'auto',
       description: 'Build test binaries.')
option('examples', type : 'feature', value : 'auto',
       description: 'Build examples.')
