# SPDX-License-Identifier: BSD-3-Clause
# Copyright 2018, Olivier MATZ <zer0@droids-corp.org>

libecoli_headers = files(
	'ecoli.h',
	'ecoli_assert.h',
	'ecoli_complete.h',
	'ecoli_config.h',
	'ecoli_dict.h',
	'ecoli_editline.h',
	'ecoli_htable.h',
	'ecoli_init.h',
	'ecoli_log.h',
	'ecoli_murmurhash.h',
	'ecoli_node.h',
	'ecoli_node_any.h',
	'ecoli_node_bypass.h',
	'ecoli_node_cmd.h',
	'ecoli_node_cond.h',
	'ecoli_node_dynamic.h',
	'ecoli_node_empty.h',
	'ecoli_node_expr.h',
	'ecoli_node_file.h',
	'ecoli_node_helper.h',
	'ecoli_node_int.h',
	'ecoli_node_many.h',
	'ecoli_node_none.h',
	'ecoli_node_once.h',
	'ecoli_node_option.h',
	'ecoli_node_or.h',
	'ecoli_node_re.h',
	'ecoli_node_re_lex.h',
	'ecoli_node_seq.h',
	'ecoli_node_sh_lex.h',
	'ecoli_node_space.h',
	'ecoli_node_str.h',
	'ecoli_node_subset.h',
	'ecoli_parse.h',
	'ecoli_string.h',
	'ecoli_strvec.h',
	'ecoli_utils.h',
	'ecoli_vec.h',
	'ecoli_yaml.h',
)

install_headers(libecoli_headers)
