# SPDX-License-Identifier: BSD-3-Clause
# Copyright 2018, Olivier MATZ <zer0@droids-corp.org>

libecoli_headers = files(
	'ecoli.h',
	'ecoli/assert.h',
	'ecoli/complete.h',
	'ecoli/config.h',
	'ecoli/dict.h',
	'ecoli/editline.h',
	'ecoli/htable.h',
	'ecoli/init.h',
	'ecoli/log.h',
	'ecoli/murmurhash.h',
	'ecoli/node.h',
	'ecoli/node_any.h',
	'ecoli/node_bypass.h',
	'ecoli/node_cmd.h',
	'ecoli/node_cond.h',
	'ecoli/node_dynamic.h',
	'ecoli/node_empty.h',
	'ecoli/node_expr.h',
	'ecoli/node_file.h',
	'ecoli/node_helper.h',
	'ecoli/node_int.h',
	'ecoli/node_many.h',
	'ecoli/node_none.h',
	'ecoli/node_once.h',
	'ecoli/node_option.h',
	'ecoli/node_or.h',
	'ecoli/node_re.h',
	'ecoli/node_re_lex.h',
	'ecoli/node_seq.h',
	'ecoli/node_sh_lex.h',
	'ecoli/node_space.h',
	'ecoli/node_str.h',
	'ecoli/node_subset.h',
	'ecoli/parse.h',
	'ecoli/string.h',
	'ecoli/strvec.h',
	'ecoli/utils.h',
	'ecoli/vec.h',
	'ecoli/yaml.h',
)

install_headers(libecoli_headers, preserve_path: true)
